fix grid gap bug

--- a/src/styles/Product.module.scss
+++ b/src/styles/Product.module.scss
@@ -2,7 +2,7 @@
 
 .productCard {
   // border: 1px solid black;
-  width: 250px;
+  width: 220px;
   // height: 500px;
   text-align: center;
   display: flex;
